--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -191,8 +191,8 @@
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_2hr-YHySYMDuptPCwhH1H7CfNShEa93koPpOo_581D4.fU-RbWLSh2I8Ytqntu1-ArKZ9OVXly0tO-X8U0Ety6Ife04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_WmhavmnC0K35xZ9vLX51qtRqFT74puvZXIMWnNUYpbM.HmKlReEYCiV9GnfhxV81WuXqMJ6i6CJEQgYJrzlXRtw0559.js?v=6.2.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_pCqeI411sVqMjF7f2fKhUUOV4yKaxxQp7FHSELuxGGc.2g5bmie0CWfVbbOg32zvwXHEUfmS0mqFc0I_Z7vrtvMfe04.js?v=10.5.0"></script>
-<script src="../unpkg.com/tabbable%406.3.0/dist/index.umd.js"></script>
-<script src="../unpkg.com/focus-trap%407.6.6/dist/focus-trap.umd.js"></script>
+<script src="./../unpkg.com/tabbable@6.3.0/dist/index.umd.js"></script>
+<script src="./../unpkg.com/focus-trap@7.6.6/dist/focus-trap.umd.js"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_1h5CQIoBI2XdL_2xDByEN7QZglJO5V5EnTwpEAX1e7I.8BwI3nxC_OdBnX_pXcnxyWWULCNn-in4KcLloXninYAfe04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_nKlW0s1eP3bGjyfbSHP4guHgnuCQ2V_IbkgMZ4UdzO4.MTHCcdAQ1524jW6nLa3EtNqF_1TujsKyr8qksEY7n6wfe04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_mjv4qhOv2_1-EQeYpZwvWqHcMokP3Cu36uHh9tRNXFY.CJF84Dv0PjH3KPaqgwzS-NJS45qPbXaVePB7UAw-uH8fe04.js?v=10.5.0"></script>
@@ -1132,7 +1132,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-05/Frame%2090%20(1)-min.png"
+      src="staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/sites/g/files/qhldwo10806/files/2024-05/Frame 90 (1)-min.png"
   alt="Black and white headshot of Katie Russo Senior Director, Strategic Business Development and Operations, ADAA"
   />
               </div>
