--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -1132,7 +1132,7 @@
   
 <img
    class="image img-fluid"
-      src="staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/sites/g/files/qhldwo10806/files/2024-05/Frame_91-min.png"
+      src="sites/g/files/qhldwo10806/files/2024-05/Frame_91-min.png"
   alt="Black and white headshot of Katie Russo Senior Director, Strategic Business Development and Operations, ADAA"
   />
               </div>
