--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -940,7 +940,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-05/Frame%2090-min.png"
+      src="sites/g/files/qhldwo10806/files/2024-05/Frame_90-min"
   alt="Black and white headshot of Susan Gurley JD Executive Director, ADAA"
   />
               </div>
