--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -493,15 +493,15 @@
    class="image"
 >
           <!--[if IE 9]><video style="display: none;"><![endif]-->
-          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_11-min_0.png 1x" media="all and (min-width: 75em)" type="image/png" width="998" height="1038"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-01/our_vision_desktop_11-min_0.png?itok=EWqgtnQk 1x" media="all and (min-width: 62em)" type="image/png" width="998" height="1038"/>
+          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop%201%20%281%29-min_0.png 1x" media="all and (min-width: 75em)" type="image/png" width="998" height="1038"/>
+          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-01/our_vision_desktop%201%20%281%29-min_0.png?itok=EWqgtnQk 1x" media="all and (min-width: 62em)" type="image/png" width="998" height="1038"/>
           <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-01/our_vision_desktop%201-min_0.png?itok=ZOiTSFkH 1x" media="all and (min-width: 48em)" type="image/png" width="784" height="568"/>
           <source srcset="/sites/g/files/qhldwo10806/files/styles/max_1300x1300/public/2024-01/our_vision_desktop%201-min_0.png?itok=P_HLCuaq 1x" media="all and (min-width: 18.75em)" type="image/png" width="784" height="568"/>
         <!--[if IE 9]></video><![endif]-->
       
 <img
    class="image"
-      src="sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop%201%20(1)-min_0.png"
+      src="sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_11-min_0.png"
   alt="Black and white photo of young man standing up against a wall with his head slumped forward"
   />
 </picture>
