--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -1012,7 +1012,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-05/Rakesh%20(1)-min.png"
+      src="sites/g/files/qhldwo10806/files/2024-05/Rakesh_1-min.png"
   alt="Black and white headshot of Rakesh Jain, MD, MPH Psychiatrist; Clinical Professor of Psychiatry, Texas Tech University School of Medicine"
   />
               </div>
