--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -1060,7 +1060,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-05/Saundra-Jain_0%20(2)-min.png"
+      src="sites/g/files/qhldwo10806/files/2024-05/Saundra-Jain_2-min.png"
   alt="Black and white headshot of Maria Margaglione Communications Manager, Depression and Bipolar Alliance"
   />
               </div>
