--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -868,7 +868,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-05/Le_Ondra_HD%201-min.png"
+      src="sites/g/files/qhldwo10806/files/2024-05/Le_Ondra_HD1-min.png"
   alt="Black and white headshot of Le Ondra Clark Harvey, PhD CEO, California Council of Community Behavioral Health Agencies; Executive Director, California Access Coalition"
   />
               </div>
