--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -678,7 +678,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-01/Scattergood_logo%201.svg"
+      src="sites/g/files/qhldwo10806/files/2024-01/Scattergood_logo_1.svg"
   alt="SCATTERGOOD FOUNDATION logo"
   />
             </div>
