--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -708,7 +708,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-03/DBSA%20Logo.png"
+      src="sites/g/files/qhldwo10806/files/2024-03/DBSA_Logo.png"
   alt="DBSA Depression and Bipolar Support Alliance logo"
   />
             </div>
