--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -758,7 +758,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-05/California%20Access%20Coalition%20ff-02-01%201.svg"
+      src="sites/g/files/qhldwo10806/files/2024-05/California_Access_Coalition_ff-02-01_1.svg"
   alt="California Access Coalition logo"
   />
             </div>
