--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -563,7 +563,7 @@
       
 <img
    class="image"
-      src="sites/g/files/qhldwo10806/files/2024-02/how_were_different_desktop%201-min_0.png"
+      src="sites/g/files/qhldwo10806/files/2024-02/how_were_different_desktop_1-min_0.png"
   alt="Black and white photo of person with hand outreached"
   />
 </picture>
@@ -738,7 +738,7 @@
   
 <img
    class="image img-fluid"
-      src="sites/g/files/qhldwo10806/files/2024-01/AA886A4D-7528-4276-A9B3-C43C226A4582%201.svg"
+      src="sites/g/files/qhldwo10806/files/2024-01/AA886A4D-7528-4276-A9B3-C43C226A4582_1.svg"
   alt="healthywomen logo"
   />
             </div>
