--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -16,7 +16,7 @@
 <meta name="MobileOptimized" content="width" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<script src="../cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="01918fb2-9930-7e1e-8f16-6b4765adaa7b"></script>
+<script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="01918fb2-9930-7e1e-8f16-6b4765adaa7b"></script>
 <script type="text/javascript" defer="defer">
   function waitForElm(selector) {
     return new Promise(function (resolve) {
@@ -103,7 +103,7 @@
   });
 </script>
 <script></script>
-<script src="../assets.adobedtm.com/3f0d2e2dbd42/4020afc76329/launch-9f3a8c3caa57.min.js" type="text/javascript" async></script>
+<script src="//assets.adobedtm.com/3f0d2e2dbd42/4020afc76329/launch-9f3a8c3caa57.min.js" type="text/javascript" async></script>
 <link rel="icon" href="sites/g/files/qhldwo10806/themes/site/themes/custom/theme_nexus/favicon.ico" type="image/vnd.microsoft.icon" />
 <script>window.a2a_config=window.a2a_config||{};a2a_config.callbacks=[];a2a_config.overlays=[];a2a_config.templates={};a2a_config.icon_color = "transparent";</script>
 
@@ -205,7 +205,7 @@
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_4bZGp8eSSkr0AcYEB06FWt2zMZLqDhKxz6gEhKnO5X0.-_wJjs2BWnIoDstNCjVUMdohPAm1Cb6KMFLzNQnyetsfe04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_dOdL6MKe8Xi7Kps6emaAgxWRpDXYc7U7glpIUKIBOiA.XAp-Kcb5FZvnj1DJvOdVsSEE04SX1ckhOvPcQwTj6hofe04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_YSBqDrGfkyMrsn-wT-lty4BnE7uEji7vl0zKC_-Z0BE.oLTnTHb9AUCZyGIMu_xYoE6Miz_LA_c24mSOzHiEwxUfe04.js?v=10.5.0"></script>
-<script src="modules/contrib/adobe_launch/js/adobe_launch_dtm_init2ad8.js?t5hzjk"></script>
+<script src="/modules/contrib/adobe_launch/js/adobe_launch_dtm_init2ad8.js?t5hzjk"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js__TF0_87cNnB7zfFuH5jalW1RMKzKj__FtRNXnDln7eA.LbmYeeNvT-Bo1K2wExK2EJO_Hm8zkO7p3Daf1NdLzbMfe04.js?v=10.5.0"></script>
 
   </head>
@@ -493,15 +493,15 @@
    class="image"
 >
           <!--[if IE 9]><video style="display: none;"><![endif]-->
-          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop%201%20%281%29-min_0.png 1x" media="all and (min-width: 75em)" type="image/png" width="998" height="1038"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-01/our_vision_desktop%201%20%281%29-min_0.png?itok=EWqgtnQk 1x" media="all and (min-width: 62em)" type="image/png" width="998" height="1038"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-01/our_vision_desktop%201-min_0.png?itok=ZOiTSFkH 1x" media="all and (min-width: 48em)" type="image/png" width="784" height="568"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_1300x1300/public/2024-01/our_vision_desktop%201-min_0.png?itok=P_HLCuaq 1x" media="all and (min-width: 18.75em)" type="image/png" width="784" height="568"/>
+          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_11-min_0.png 1x" media="all and (min-width: 75em)" type="image/png" width="998" height="1038"/>
+          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_12-min_0.png?itok=EWqgtnQk 1x" media="all and (min-width: 62em)" type="image/png" width="998" height="1038"/>
+          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_13-min_0.png?itok=ZOiTSFkH 1x" media="all and (min-width: 48em)" type="image/png" width="784" height="568"/>
+          <source srcset="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_14-min_0.png?itok=P_HLCuaq 1x" media="all and (min-width: 18.75em)" type="image/png" width="784" height="568"/>
         <!--[if IE 9]></video><![endif]-->
       
 <img
    class="image"
-      src="sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_11-min_0.png"
+      src="/sites/g/files/qhldwo10806/files/2024-01/our_vision_desktop_15-min_0.png"
   alt="Black and white photo of young man standing up against a wall with his head slumped forward"
   />
 </picture>
