--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -555,15 +555,15 @@
    class="image"
 >
           <!--[if IE 9]><video style="display: none;"><![endif]-->
-          <source srcset="/sites/g/files/qhldwo10806/files/2024-02/how_were_different_desktop_1-min_0.png 1x" media="all and (min-width: 75em)" type="image/png" width="1148" height="648"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-02/how_were_different_desktop_1-min_0.png?itok=eoI09Mqv 1x" media="all and (min-width: 62em)" type="image/png" width="1148" height="648"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-02/how_were_different_desktop%201%20%281%29-min.png?itok=pm9_XDQt 1x" media="all and (min-width: 48em)" type="image/png" width="784" height="443"/>
-          <source srcset="/sites/g/files/qhldwo10806/files/styles/max_1300x1300/public/2024-02/how_were_different_desktop%201%20%281%29-min.png?itok=zlnKB3qu 1x" media="all and (min-width: 18.75em)" type="image/png" width="784" height="443"/>
+          <source srcset="sites/g/files/qhldwo10806/files/2024-02/how_were_different_desktop_11-min_0.png" media="all and (min-width: 75em)" type="image/png" width="1148" height="648"/>
+          <source srcset="sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-02/how_were_different_desktop_12-min_0.png" media="all and (min-width: 62em)" type="image/png" width="1148" height="648"/>
+          <source srcset="sites/g/files/qhldwo10806/files/styles/max_2600x2600/public/2024-02/how_were_different_desktop_13-min_0.png" media="all and (min-width: 48em)" type="image/png" width="784" height="443"/>
+          <source srcset="sites/g/files/qhldwo10806/files/styles/max_1300x1300/public/2024-02/how_were_different_desktop_14-min_0.png" media="all and (min-width: 18.75em)" type="image/png" width="784" height="443"/>
         <!--[if IE 9]></video><![endif]-->
       
 <img
    class="image"
-      src="sites/g/files/qhldwo10806/files/2024-02/how_were_different_desktop_1-min_0.png"
+      src="sites/g/files/qhldwo10806/files/2024-02/how_were_different_desktop_11-min_0.png"
   alt="Black and white photo of person with hand outreached"
   />
 </picture>
