--- a/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
+++ b/staticsite/nmh2/nexusmentalhealth/www.nexusmentalhealth.com/index.html
@@ -205,7 +205,7 @@
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_4bZGp8eSSkr0AcYEB06FWt2zMZLqDhKxz6gEhKnO5X0.-_wJjs2BWnIoDstNCjVUMdohPAm1Cb6KMFLzNQnyetsfe04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_dOdL6MKe8Xi7Kps6emaAgxWRpDXYc7U7glpIUKIBOiA.XAp-Kcb5FZvnj1DJvOdVsSEE04SX1ckhOvPcQwTj6hofe04.js?v=10.5.0"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js_YSBqDrGfkyMrsn-wT-lty4BnE7uEji7vl0zKC_-Z0BE.oLTnTHb9AUCZyGIMu_xYoE6Miz_LA_c24mSOzHiEwxUfe04.js?v=10.5.0"></script>
-<script src="/modules/contrib/adobe_launch/js/adobe_launch_dtm_init2ad8.js?t5hzjk"></script>
+<script src="https://www.nexusmentalhealth.com/modules/contrib/adobe_launch/js/adobe_launch_dtm_init.js?t5hzjk"></script>
 <script src="sites/g/files/qhldwo10806/files/js/optimized/js__TF0_87cNnB7zfFuH5jalW1RMKzKj__FtRNXnDln7eA.LbmYeeNvT-Bo1K2wExK2EJO_Hm8zkO7p3Daf1NdLzbMfe04.js?v=10.5.0"></script>
 
   </head>
